<resources>
    <string name="app_name">老友圈</string>
    <string name="title_activity_visit_code">邀请码进入</string>
    <string name="visitcode_hint">请输入您收到的邀请码</string>
    <string name="visitcode_enter">进 入</string>
    <string name="visitcode_create_tip">还没有您的圈子？</string>
    <string name="visitcode_create">创建</string>
    <string name="title_activity_create">创建圈子</string>
    <string name="hint_activity_create">输入圈子名称</string>
    <string name="next_step">下一步</string>
    <string name="title_activity_touch_pwd">设置手势密码</string>
    <string name="tip_activity_visit_code">验证邀请码...</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">栗木小学1997届同学群</string>
    <string name="tab_home_playground">广场</string>
    <string name="tab_home_contact">通讯录</string>
    <string name="tab_home_chat">聊天</string>
    <string name="tab_home_activity">活动</string>
    <string name="tab_home_me">我</string>

    <string name="message_welcome">欢迎找到组织，从此以后你也算是有组织、有纪律、有身份的三友青年了!</string>
    <string name="message_boss_complete_info">群主是不是应该给自己起个名字，什么“司令”、“老大”，“扛把子”的也来一个，也在圈子里能晗的出口啊!群主是不是应该给自己起个名字，什么“司令”、“老大”，“扛把子”的也来一个，也在圈子里能晗的出口啊!群主是不是应该给自己起个名字，什么“司令”、“老大”，“扛把子”的也来一个，也在圈子里能晗的出口啊!群主是不是应该给自己起个名字，什么“司令”、“老大”，“扛把子”的也来一个，也在圈子里能晗的出口啊!群主是不是应该给自己起个名字，什么“司令”、“老大”，“扛把子”的也来一个，也在圈子里能晗的出口啊!群主是不是应该给自己起个名字，什么“司令”、“老大”，“扛把子”的也来一个，也在圈子里能晗的出口啊!群主是不是应该给自己起个名字，什么“司令”、“老大”，“扛把子”的也来一个，也在圈子里能晗的出口啊!群主是不是应该给自己起个名字，什么“司令”、“老大”，“扛把子”的也来一个，也在圈子里能晗的出口啊!</string>

    <string name="no_contact_tip">好冷清啊,赶紧邀请几个老友进来吧</string>
    <string name="visit_button_text">邀  请</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_base"></string>

    <string name="title_activity_visit">邀请好友</string>
    <string name="visit_way_one">方式一</string>
    <string name="visit_way_one_tip">扫描二维码</string>
    <string name="visit_way_two">方式二</string>
    <string name="visit_way_two_tip">微信分享</string>
    <string name="title_activity_swipe_code">本群二维码</string>
    <string name="read_qrcode_failure">二维码读取失败</string>
    <string name="create_qrcode">生成二维码...</string>

    <string name="pub_activity">发起活动</string>
    <string name="title_activity_person">PersonActivity</string>

    <string name="loading_boot_qq">启动QQ...</string>
    <string name="loading_boot_wx">启动微信...</string>

    <string name="activity_share_button">分享</string>
    <string name="activity_join_button">参加</string>
    <string name="activity_join_text_left">已有</string>
    <string name="activity_join_text_right">人参加</string>
    <string name="activity_pub_text">发起人：</string>
    <string name="activity_pay_text">费用：</string>
    <string name="title_activity_">活动内页</string>


    <string name="goback">返回</string>
</resources>
