<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.kyf.laoyou.VisitActivity">

    <TextView android:text="@string/visit_way_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_height"
        android:background="@drawable/bt_el"
        android:text="@string/visit_way_one_tip"
        android:textSize="@dimen/button_text_size"
        android:textColor="@color/white"
        android:id="@+id/SwipeCodeBt"
        />

    <TextView android:text="@string/visit_way_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_height"
        android:background="@drawable/bt_el"
        android:text="@string/visit_way_two_tip"
        android:textSize="@dimen/button_text_size"
        android:textColor="@color/white"
        />
</LinearLayout>
