<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/white"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.kyf.laoyou.VisitCodeActivity">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_height"
        android:layout_marginTop="@dimen/first_el_margin_top"
        android:layout_marginBottom="@dimen/last_el_margin_bottom"
        android:height="@dimen/input_height"
        android:gravity="center"
        android:background="@drawable/el"
        android:hint="@string/visitcode_hint" />

    <Button
        android:id="@+id/ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bt_el"
        android:textColor="@color/white"
        android:textSize="@dimen/button_text_size"
        android:text="@string/visitcode_enter" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="90dp"
        android:layout_gravity="center"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/visitcode_create_tip" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/visitcode_create"
            android:textSize="@dimen/button_text_size"
            android:id="@+id/createbt"
            />

    </LinearLayout>
</LinearLayout>
