<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/chat_item_margin_top"
        android:layout_marginTop="@dimen/chat_item_margin_top"
        android:background="@drawable/activity_el"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content">
                
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="@dimen/chat_photo_height"
                    android:layout_height="@dimen/chat_photo_width"
                    android:id="@+id/activity_list_photo"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/activity_text_margin_top"
                    android:layout_marginBottom="@dimen/activity_text_margin_bottom"
                    />

                <LinearLayout
                    android:layout_marginBottom="@dimen/activity_text_margin_bottom"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/activity_text_size"
                        android:text="@string/activity_pub_text"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/activity_text_size"
                        android:id="@+id/activity_list_creater"
                        android:singleLine="true"
                        android:ellipsize="end"
                        />
                </LinearLayout>


                <LinearLayout
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/activity_text_size"
                        android:text="@string/activity_pay_text"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/activity_text_size"
                        android:singleLine="true"
                        android:id="@+id/activity_list_pay"
                        android:ellipsize="end"
                        />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/activity_list_title"
                    android:textColor="@color/black"
                    android:textSize="@dimen/activity_title_size"
                    android:layout_marginTop="@dimen/activity_text_margin_top"
                    android:singleLine="true"
                    android:ellipsize="end"
                    android:layout_marginBottom="@dimen/activity_text_margin_bottom"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/activity_text_size"
                    android:singleLine="true"
                    android:id="@+id/activity_list_addr"
                    android:ellipsize="end"
                    android:layout_marginBottom="@dimen/activity_text_margin_bottom"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_text_margin_bottom"
                    android:singleLine="true"
                    android:ellipsize="end"
                    android:id="@+id/activity_list_date"
                    android:textSize="@dimen/activity_text_size"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/activity_list_note"
                    android:textSize="@dimen/activity_text_size"
                    />
            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/devide_line"
            android:background="@color/gray"
            android:layout_marginTop="@dimen/activity_text_margin_top"
            />

        <LinearLayout
            android:gravity="right|center_vertical"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_height">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/activity_button_size"
                android:text="@string/activity_join_text_left"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/activity_button_size"
                android:id="@+id/activity_list_number"
                android:textColor="@android:color/holo_red_light"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/activity_button_size"
                android:text="@string/activity_join_text_right"
                android:layout_marginRight="@dimen/action_button_margin_right"
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/activity_button_size"
                android:text="@string/activity_share_button"
                android:id="@+id/activity_list_share"
                android:layout_marginRight="@dimen/action_button_margin_right"
                android:textColor="@color/AppBase"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/activity_button_size"
                android:text="@string/activity_join_button"
                android:id="@+id/activity_list_join"
                android:layout_marginRight="@dimen/action_button_margin_right"
                android:textColor="@color/AppBase"
                />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>